--- a/src/main/webapp/restricted/cliente/form.xhtml
+++ b/src/main/webapp/restricted/cliente/form.xhtml
@@ -2,7 +2,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:jsf="http://xmlns.jcp.org/jsf"
+      xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"      
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <p:tabView id="tabView" widgetVar="tabView">
@@ -72,11 +72,6 @@
             </p:dataTable>
                  
         </p:tab>        
-    </p:tabView>
-
-    <div class="btns">
-        <p:commandButton actionListener="#{clienteController.salvar}" id="salvar" styleClass="btn-primary" value="#{bundle.Salvar}" process="@form" update="@form"/>
-        <p:commandButton actionListener="#{clienteController.voltar}" class="btn btn-link" value="#{bundle.voltar}" update="@form" process="@this"/>        
-    </div>
-    
+    </p:tabView>    
+    <comp:botoesForm id="acoes" form="#{clienteController}"></comp:botoesForm>
 </ui:composition>
