--- a/src/main/webapp/restricted/cliente/list.xhtml
+++ b/src/main/webapp/restricted/cliente/list.xhtml
@@ -4,6 +4,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
                 xmlns:p="http://primefaces.org/ui">
     
     <p:dataTable id="tabela" styleClass="table table-striped" value="#{clienteController}" var="item" lazy="true" selectionMode="single" selection="#{clienteController.selected}"
@@ -27,8 +28,5 @@
             <p:commandButton id="deleteButton" icon="ui-icon-trash"  actionListener="#{clienteController.delete(item)}" update="tabela"/>
         </p:column>
     </p:dataTable>
-    <div class="btns">
-        <p:commandButton id="createButton" styleClass="btn btn_verde" value="#{bundle.novo}" actionListener="#{clienteController.prepareCreate}" update="@form"/>
-    </div>
-    
+    <comp:botoesNovo id="novo" form="#{clienteController}"/>
 </ui:composition>
