--- a/src/main/webapp/restricted/filial/form.xhtml
+++ b/src/main/webapp/restricted/filial/form.xhtml
@@ -2,6 +2,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <p:focus for="descricao"/>
@@ -26,8 +27,5 @@
         <p:inputText id="osfim" value="#{filialController.selected.osfim}" styleClass="form-control"/>
         
     </p:panelGrid>
-    <div class="btns">
-        <p:commandButton actionListener="#{filialController.salvar}" styleClass="btn btn-primary" value="#{bundle.Salvar}" process="pnDados @this" update="@form"/>
-        <p:commandButton actionListener="#{filialController.voltar}" styleClass="btn btn-link" value="#{bundle.voltar}" update="@form" process="@this"/>        
-    </div>
+    <comp:botoesForm id="acoes" form="#{filialController}"></comp:botoesForm>    
 </ui:composition>
