--- a/src/main/webapp/restricted/filial/list.xhtml
+++ b/src/main/webapp/restricted/filial/list.xhtml
@@ -4,6 +4,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
                 xmlns:p="http://primefaces.org/ui">
 
 
@@ -29,7 +30,5 @@
             <p:commandButton id="deleteButton" icon="ui-icon-trash"  actionListener="#{filialController.delete(item)}" update="tabela"/>
         </p:column>
     </p:dataTable>
-    <div class="btns">
-        <p:commandButton id="createButton" styleClass="btn btn-success"  value="#{bundle.novo}" actionListener="#{filialController.prepareCreate}" update="@form"/>            
-    </div>
+    <comp:botoesNovo id="novo" form="#{filialController}"/>
 </ui:composition>
