--- a/src/main/webapp/restricted/fornecedor/list.xhtml
+++ b/src/main/webapp/restricted/fornecedor/list.xhtml
@@ -4,6 +4,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
                 xmlns:p="http://primefaces.org/ui">
     
     <p:dataTable id="tabela" value="#{fornecedorController}" var="item" lazy="true" selectionMode="single" selection="#{fornecedorController.selected}"  emptyMessage="#{bundle.emptyMessage}"
@@ -21,9 +22,6 @@
             <p:commandButton id="deleteButton" icon="ui-icon-trash"  actionListener="#{fornecedorController.delete(item)}" update="tabela"/>
         </p:column>            
     </p:dataTable>
-
-    <div class="btns">
-        <p:commandButton id="createButton" value="#{bundle.novo}" styleClass="btn btn-success" actionListener="#{fornecedorController.prepareCreate}" update="@form" process="@form"/>
-    </div>   
-    
+ 
+    <comp:botoesNovo id="novo" form="#{fornecedorController}"/>
 </ui:composition>
