--- a/src/main/webapp/restricted/ordemServico/list.xhtml
+++ b/src/main/webapp/restricted/ordemServico/list.xhtml
@@ -35,7 +35,7 @@
                     </p:selectOneRadio>
                 </p:panelGrid>
                 <div class="btns">
-                    <p:commandButton action="#{consultaOrdemServicoController.consultar}" styleClass="btn btn-success" value="Consultar" process="@form" update="@form"/>
+                    <p:commandButton action="#{consultaOrdemServicoController.consultar}" styleClass="bbtn btn_verde" value="Consultar" process="@form" update="@form"/>
                 </div>
             </div>
             <p:dataTable id="tabela" styleClass="tabela" value="#{consultaOrdemServicoController}" var="item" lazy="true" rowKey="#{item.id}" 
