--- a/src/main/webapp/restricted/produto/form.xhtml
+++ b/src/main/webapp/restricted/produto/form.xhtml
@@ -2,6 +2,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <p:focus for="descricao"/>
@@ -17,8 +18,5 @@
         <h:outputLabel value="#{bundle.ativo}"/>
         <p:selectBooleanCheckbox value="#{produtoController.selected.ativo}" id="ativo"/>         
     </p:panelGrid>
-    <div class="btns">
-        <p:commandButton action="#{produtoController.salvar}" styleClass="btn btn-primary" value="#{bundle.Salvar}" process="pnDados @this" update="@form"/>
-        <p:commandButton actionListener="#{produtoController.voltar}" styleClass="btn btn-link" value="#{bundle.voltar}" update="@form" process="@this"/>        
-    </div>
+    <comp:botoesForm id="acoes" form="#{produtoController}"></comp:botoesForm>   
 </ui:composition>
