--- a/src/main/webapp/restricted/produto/list.xhtml
+++ b/src/main/webapp/restricted/produto/list.xhtml
@@ -4,6 +4,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
                 xmlns:p="http://primefaces.org/ui">
 
 
@@ -38,8 +39,5 @@
         </p:column>
     </p:dataTable>
     
-    <div class="btns">
-        <p:commandButton id="createButton" styleClass="btn btn-success"   value="#{bundle.novo}" actionListener="#{produtoController.prepareCreate}" update="@form"/>            
-    </div>
-    
+    <comp:botoesNovo id="novo" form="#{produtoController}"/>
 </ui:composition>
