--- a/src/main/webapp/restricted/servico/form.xhtml
+++ b/src/main/webapp/restricted/servico/form.xhtml
@@ -2,6 +2,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"      
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <p:focus for="descricao"/>
@@ -15,8 +16,5 @@
         </p:inputText>
         
     </p:panelGrid>
-    <div class="btns">
-        <p:commandButton action="#{servicoController.salvar}" styleClass="btn btn-primary" value="#{bundle.Salvar}" process="pnDados @this" update="@form"/>
-        <p:commandButton actionListener="#{servicoController.voltar}" styleClass="btn btn-link" value="#{bundle.voltar}" update="@form" process="@this"/>        
-    </div>
+    <comp:botoesForm id="acoes" form="#{servicoController}"></comp:botoesForm>   
 </ui:composition>
