--- a/src/main/webapp/restricted/servico/list.xhtml
+++ b/src/main/webapp/restricted/servico/list.xhtml
@@ -4,6 +4,7 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:comp="http://xmlns.jcp.org/jsf/composite/component"
                 xmlns:p="http://primefaces.org/ui">
     
     <p:dataTable id="tabela" value="#{servicoController}" var="item" lazy="true" selectionMode="single" selection="#{servicoController.selected}" 
@@ -29,8 +30,5 @@
             <p:commandButton id="deleteButton" icon="ui-icon-trash"  actionListener="#{servicoController.delete(item)}" update="tabela"/>
         </p:column>            
     </p:dataTable>
-
-    <div class="btns">
-       <p:commandButton id="createButton" value="#{bundle.novo}" styleClass="btn btn-success" actionListener="#{servicoController.prepareCreate}" update="@form" process="@form"/>
-    </div>    
+    <comp:botoesNovo id="novo" form="#{servicoController}"/>
 </ui:composition>
