--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -10,14 +10,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <h:outputStylesheet library="css" name="bootstrap.min.css"/>
         <h:outputStylesheet library="css" name="bootstrap-theme.min.css"/>        
+        <h:outputStylesheet library="css" name="reset.css"/>        
         <h:outputStylesheet library="css" name="default.css"/>
         <title><ui:insert name="title">Controle</ui:insert></title>
     </h:head>
     
     <h:body>
             <!-- Fixed navbar -->
-            <nav class="avbar navbar-inverse navbar-fixed-top" role="navigation">
-              <div class="container-fluid">
+            <nav class="navbar navbar-default navbar-static-top" role="navigation">
+              <div class="container">
                 <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -25,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>                  
-                  <a class="navbar-brand glyphicon glyphicon-tasks" href="/Controle/"/>
+                    <a class="navbar-brand glyphicon glyphicon-globe" title="Página Inicial" href="/Controle/"/>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   <ul class="nav navbar-nav">                    
@@ -55,18 +56,15 @@
                   </ul>
                   <ul class="nav navbar-nav navbar-right">                      
                       <h:form>                          
-                        <h:commandLink action="#{loginController.doLogout}" value="Sair" style="font-size: 10px"/>
+                        <h:commandLink action="#{loginController.doLogout}" value="Sair" style="font-size: 15px"/>
                       </h:form>
                   </ul>                    
                 </div><!--/.nav-collapse -->
               </div>
             </nav>
         <br/>
-        <div class="container-fluid">
-                       
+        <div class="container">                       
             <div class="row">
-                <br/>
-                <br/>
                 <ol class="breadcrumb">
                     <li><a href="/Controle/restricted/principal.jsf">Home</a></li>
                     <li class="active"><ui:insert name="caminho"></ui:insert></li>
