Rotinas de Segurança. Teste.
Teste de Rotinas de segurança.

--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -37,6 +37,7 @@
                           <li><a href="/Controle/restricted/fornecedor/fornecedor.jsf">Fornecedor</a></li>
                           <li><a href="/Controle/restricted/filial/filial.jsf">Filial</a></li>
                           <li><a href="/Controle/restricted/servico/servico.jsf">Serviços</a></li>
+                          <li><a href="/Controle/restricted/usuario/usuario.jsf">Usuários</a></li>
                           <li><a href="/Controle/restricted/produto/produto.jsf">Produto</a></li>
                       </ul>                      
                     </li>
