--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -54,6 +54,12 @@
                         <li><a href="/Controle/restricted/contaPagar/contaPagar.jsf">Conta Pagar</a></li>                        
                       </ul>                      
                     </li>                      
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mensagem<span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="/Controle/restricted/mensagens/list.jsf">Consultar Mensagens</a></li>                        
+                      </ul>                      
+                    </li>                       
                   </ul>
                   <ul class="nav navbar-nav navbar-right">                      
                       <h:form>                          
