--- a/src/main/webapp/restricted/mensagens/list.xhtml
+++ b/src/main/webapp/restricted/mensagens/list.xhtml
@@ -14,6 +14,9 @@
                 <p:panelGrid columns="2" columnClasses="ui-grid-col-1, ui-grid-col-6" layout="grid">
                     <p:outputLabel for="usuario" value="Usuario:"/>
                     <p:inputText id="usuario" value="#{mensagemController.usuario}" required="true"/>
+                    
+                    <p:outputLabel for="usuario" value="Usuario:"/>
+                    <p:password id="senha" value="#{mensagemController.senha}" required="true"/>                    
                 </p:panelGrid>               
             </div>
             <br/>
